docker/certificates/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        -  name: nginx-tls
           kind: Secret
           namespace: nginx-gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nc-prod
  namespace: nc-prod
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      hostname: "nightscloak.com"
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          -  name: prod-tls
             kind: Secret
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nc-develop
  namespace: nc-develop
  annotations: # This is the name of the ClusterIssuer created in the previous step
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: nginx
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      hostname: "nightscloak.dev"
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          -  name: develop-tls
             kind: Secret
